# paicode

./: .env.example  .gitignore  CNAME  INSTALLGUIDE.md  PRESENTATION_SUMMARY.md  README.md  SETUPDOCS.md  demo_prompts.md  index.html  listing.txt  makefile  pai.py  pyproject.toml  requirements.txt  setup.cfg
docs/: CAROUSEL_INFO.md  PRESENTATION_GUIDE.md  architecture.md  features.md  usage.md
pages/poster/: poster.html
pages/presentation/: index.html  slide1.html  slide2.html  slide3.html  slide4.html  slide5.html  slide5_new.html  slide6.html  slide7.html
pai_code/: agent.py  cli.py  fs.py  llm.py
paicode/: __init__.py  agent.py  awareness.py  cli.py  config.py  fs.py  llm.py  platforms.py  ui.py  workspace.py
src/: agent.py  cli.py  config.py  fs.py  llm.py  ui.py
