# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pai-code"
version = "0.1.0"
authors = [
  { name="gtkrshnaaa", email="gtkrshnaaa@email.com" },
]
description = "A command-line based agentic AI for software development."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-generativeai",
    "python-dotenv",
    "rich",
]

[project.scripts]
pai = "pai_code.cli:main"

[tool.setuptools]
packages = ["pai_code"]