[metadata]
name = pai-code
version = 0.1.0
description = A command-line based agentic AI for software development.
long_description = file: README.md
long_description_content_type = text/markdown
author = gtkrshnaaa
author_email = gtkrshnaaa@email.com
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires =
    google-generativeai>=0.5.4
    python-dotenv>=1.0.1
    rich>=13.7.1
include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    pai = paicode.cli:main
